<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:contentDescription="@string/back"
            android:elevation="@dimen/dp_10"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_380"
            android:contentDescription="@string/image"
            android:scaleType="fitXY" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/ivAvatar"
            android:layout_marginTop="@dimen/dp_20_minus"
            android:background="@drawable/bg_detail"
            android:padding="@dimen/dp_10">

            <include
                android:id="@+id/include"
                layout="@layout/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_score"
                android:textColor="@color/teal_200"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.973"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_5"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_22"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/include"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_36"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDate" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_16"
            app:backgroundTint="@color/pink"
            app:elevation="@dimen/dp_5"
            android:elevation="@dimen/dp_16"
            app:pressedTranslationZ="@dimen/dp_10"
            app:fabCustomSize="@dimen/dp_55"
            app:maxImageSize="@dimen/dp_30"
            app:tint="@color/white"
            app:rippleColor="@color/white"
            app:borderWidth="@dimen/dp_0"
            android:contentDescription="@string/fav"
            android:src="@drawable/ic_baseline_favorite_24" />
    </RelativeLayout>


</androidx.core.widget.NestedScrollView>


